--- a/public/main.css
+++ b/public/main.css
@@ -120,14 +120,18 @@ width: 0;
         position: relative;
     }
     #captureButton {
-        top:30%;
+        top:65%;
         right:25%;
+        left: 15%;
         z-index: 10;
+        padding: 0 0.5rem;
     }
+
     #take-again {
         position: relative;
         top:30%;
         right:25%;
+        left: 15%;
         z-index: 10;
     }
     .product-description {
@@ -144,7 +148,15 @@ width: 0;
         font-size: 3rem;
     }
 }
-
+@media only screen and (min-width: 1182px) {
+    .product-description {
+        margin-right: 15rem;
+        float: right;
+    }
+    #take-again {
+        left: 6%;
+    }
+}
 /* PROGRESS BARS */
 
 #myProgress {
